--- a/main.html
+++ b/main.html
@@ -3,8 +3,9 @@
 
 <head>
    <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+   <meta name="viewport" content="width=device-width,initial-scale=1">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <link rel="stylesheet" href="Style/Stylesheet.css">
    <link rel="preconnect" href="https://fonts.gstatic.com">
    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
    <script src="https://kit.fontawesome.com/8ac16a56cb.js" crossorigin="anonymous"></script>
@@ -12,8 +13,9 @@
 </head>
 
 <body>
-<header>
-    
+
+<header id="Title">
+    <h1>Array</h1>
 </header>
 
 
