--- a/main.html
+++ b/main.html
@@ -18,6 +18,16 @@
     <h1>Array</h1>
 </header>
 
+<div id="OptionsContain">
+
+<div class="Select">
+<button id="RefreshImage"><span>New Image</span></button>
+<button id="LinkTo"><span>Link to Email</span></button>
+<button id="LinkedTo"><span>Linked Emails</span></button>
+</div>
+
+</div>
+
 
 
 
