--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
     <h1>Array</h1>
 </header>
 
-<div id="OptionsContain">
+<div id="OptionsContain" class="Container">
 
 <div class="Select">
 <button id="RefreshImage"><span>New Image</span></button>
@@ -28,14 +28,14 @@
 
 </div>
 
+<div class="ImageContain">
+   
+<div id="ImageDisplay">
+   <div id="Image"></div>
+</div>
 
 
-
-
-
-
-
-
+</div>
 
 
 
@@ -49,3 +49,5 @@
 
 
 </body>
+
+</html>
