--- a/main.html
+++ b/main.html
@@ -22,9 +22,9 @@
 <div id="OptionsContain" class="Container">
 
 <div class="Select">
-<button id="RefreshImage"><span>New Image</span></button>
-<button id="LinkTo"><span>Link to Email</span></button>
-<button id="LinkedTo"><span>Linked Emails</span></button>
+<button id="Refresh" onClick="myFunction()"><span>New Image</span></button>
+<button id="LinkTo" onClick="myFunction2()"><span>Link to Email</span></button>
+<button id="LinkedTo" onClick="myFunction3()"><span>Linked Emails</span></button>
 </div>
 
 </div>
