--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
 <div class="ImageContain">
 
 <div id="ImageDisplay">
-   <div id="Image"></div>
+   <div id="Image"><img src="https://picsum.photos/200"></div>
 </div>
 
 </div>
