--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 <div id="OptionsContain" class="Container">
 
 <div class="Select">
-<button id="Refresh" onClick="myFunction()"><span>New Image</span></button>
+<button id="Refresh" onClick="ImageChange()"><span>New Image</span></button>
 <button id="LinkTo" onClick="myFunction2()"><span>Link to Email</span></button>
 <button id="LinkedTo" onClick="myFunction3()"><span>Linked Emails</span></button>
 </div>
@@ -33,7 +33,7 @@
 <div class="ImageContain">
 
 <div id="ImageDisplay">
-   <div id="Image"><img src="https://picsum.photos/500"></div>
+   <div id="Imagebox"><img src="https://picsum.photos/500" id="getImage"></div>
 </div>
 
 </div>
@@ -47,7 +47,7 @@
 
 
 
-<script src="JS/Functions.js"></script>
+<script type="text/javascript" src="JS/Functions.js"></script>
 
 </body>
 
