--- a/main.html
+++ b/main.html
@@ -22,30 +22,12 @@
 <div id="OptionsContain" class="Container">
 
 <div class="Select">
-<button id="Refresh" onClick="ImageChange()"><span>New Image</span></button>
+<button id="Refresh" onclick="display_random_image();"><span>New Image</span></button>
 <button id="LinkTo" onClick="myFunction2()"><span>Link to Email</span></button>
 <button id="LinkedTo" onClick="myFunction3()"><span>Linked Emails</span></button>
 </div>
 
 </div>
-
-
-<div class="ImageContain">
-
-<div id="ImageDisplay">
-   <div id="Imagebox"><img src="https://picsum.photos/500" id="getImage"></div>
-</div>
-
-</div>
-
-
-
-
-
-
-
-
-
 
 <script type="text/javascript" src="JS/Functions.js"></script>
 
