--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 <div id="OptionsContain" class="Container">
 
 <div class="Select">
-<button id="Refresh" onclick="display_random_image();"><span>New Image</span></button>
+<button id="Refresh" onclick="ChangeImage();"><span>New Image</span></button>
 <button id="LinkTo" onClick="myFunction2()"><span>Link to Email</span></button>
 <button id="LinkedTo" onClick="myFunction3()"><span>Linked Emails</span></button>
 </div>
