--- a/main.html
+++ b/main.html
@@ -23,8 +23,8 @@
 
 <div class="Select">
 <button><span>New Image</span></button>
-<button id="LinkTo" onClick="myFunction2()"><span>Link to Email</span></button>
-<button id="LinkedTo" onClick="myFunction3()"><span>Linked Emails</span></button>
+<button id="LinkTo"><span>Link to Email</span></button>
+<button id="LinkedTo"><span>Linked Emails</span></button>
 </div>
 
 </div>
