--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 
 <div class="Select">
 <button><span>New Image</span></button>
-<button id="LinkTo"><span>Link to Email</span></button>
+<button id="LinkTo" onclick="FormUp"><span>Link to Email</span></button>
 <button id="LinkedTo"><span>Linked Emails</span></button>
 </div>
 
