--- a/main.html
+++ b/main.html
@@ -27,14 +27,12 @@
    <button id="LinkedTo"><span>Linked Emails</span></button>
 </div>
 
-
-   <div id="FormContainer" class="FormBox">
-      <form action="#" id="form" method="post" name="form">
-        <input id="email" name="email" placeholder="Email" type="text">
-        <button id="submit">Submit</button>
-      </form>
-    </div>
-
+<div id="FormContainer" class="FormBox">
+    <form action="#" id="form" method="post" name="form">
+      <input id="email" name="email" placeholder="Email..." type="text">
+      <button id="submit">Submit</button>
+    </form>
+  </div>
 
 
 
