--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <link rel="stylesheet" href="Styles/Stylesheet.css">
+   <link rel="stylesheet" href="Style/Stylesheet.css">
    <link rel="Form" href="popupform.html">
    <link rel="preconnect" href="https://fonts.gstatic.com">
    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
