--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
    <link rel="stylesheet" href="Style/Stylesheet.css">
    <link rel="Form" href="popupform.html">
    <link rel="preconnect" href="https://fonts.gstatic.com">
-   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Homemade+Apple&display=swap" rel="stylesheet">
    <script src="https://kit.fontawesome.com/8ac16a56cb.js" crossorigin="anonymous"></script>
    <title>Javascript Array</title>
 </head>
